--- a/producer/Dockerfile
+++ b/producer/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM golang:1.19
+FROM golang:1.21
 
 WORKDIR /app
 COPY go.mod go.sum ./
@@ -8,6 +8,6 @@ RUN go mod download
 COPY *.go ./
 
 # TODO: set the correct architecture for deployment
-RUN CGO_ENABLED=0 GOOS=linux go build -o /consumer 
+RUN CGO_ENABLED=0 GOOS=linux go build -o /producer 
 
-CMD ["/consumer"]
+CMD ["/producer"]
