--- a/producer/cronjob.yaml
+++ b/producer/cronjob.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: producer
@@ -10,6 +10,6 @@ spec:
         spec:
           containers:
           - name: producer
-            image: jonnaymt/ssc-producer
+            image: jonnaymt/ssc-producer:1
             imagePullPolicy: Always
-          restartPolicy: never
+          restartPolicy: Never
